--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@ keras==2.8.0
 monai==1.1.0
 nibabel==3.2.2
 numba==0.55.1
-numpy==1.24.4
+numpy
 opencv-python==4.7.0.68
 pandas==1.3.5
 pillow==10.2.0
 pydicom==2.3.1
-python-box @ file:///home/conda/feedstock_root/build_artifacts/python-box_1629655876446/work
+python-box
 PyYAML==6.0
 scikit-image==0.21.0
 scikit-learn==1.3.2
@@ -20,8 +20,10 @@ seaborn==0.11.2
 SimpleITK==2.1.1.2
 tensorboard==2.8.0
 tensorflow==2.8.0
-torch==2.0.0+cu117
+torch==2.0.0
 torch-tb-profiler==0.3.1
-torchaudio==2.0.1+cu117
-torchvision==0.15.1+cu117
-tqdm @ file:///tmp/build/80754af9/tqdm_1635330843403/work
+torchaudio==2.0.1
+torchvision==0.15.1
+tqdm
+ruamel.yaml==0.18.6
+protobuf==3.20.0
