--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ keras==2.8.0
 monai==1.1.0
 nibabel==3.2.2
 numba==0.55.1
-numpy
+numpy==1.21.6
 opencv-python==4.7.0.68
 pandas==1.3.5
 pillow==10.2.0
