--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build
+          pip install .
 
       - name: Build package
-        run: python -m build
+        run: python setup.py sdist bdist_wheel
 
       - name: Store the distribution packages
         uses: actions/upload-artifact@v3
